修改按钮组件样式

--- a/src/plugin/assets/scss/button.scss
+++ b/src/plugin/assets/scss/button.scss
@@ -35,7 +35,7 @@ $white: #fff;
 }
 
 // &替换父选择器,#{}插值
-.vzer-btn {
+.vzer-button {
   display: inline-block;
   text-align: center;
   cursor: pointer;
