--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -173,7 +173,7 @@ button,
 input,
 textarea {
   outline: none;
-  -webkit-appearance: none;
+  /* -webkit-appearance: none; */
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
